--- a/Assets/style.css
+++ b/Assets/style.css
@@ -59,16 +59,21 @@ header button {
     align-self: center;
     display: flex;
     flex-direction: column;
-    width: 30%;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
     margin-top: 10%;
 
 }
 
 .card-container li {
-    border: 1px solid black;
-    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 4px solid black;
+    border-radius: 75px;
     width: 75%;
-    height: 30px;
+    height: 3em;
     margin-bottom: 10px;
     background-color: blue;
     text-align: center;
