--- a/Assets/style.css
+++ b/Assets/style.css
@@ -9,6 +9,7 @@ body {
     height: 90vh;
 }
 
+
 header{
     display: flex;
     flex-direction: column;
@@ -35,15 +36,17 @@ header button {
     justify-content: space-around;
     height: 100%;
     align-items: center;
+    border: 1px dotted red;
+    background-image: radial-gradient(whitesmoke, black);
 
 }
 
 .card-container{
     display: flex;
-    width: 65%;
+    width: 50%;
     height: 25em;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-around;
     border: 5px solid black;
     border-radius: 30px;
     background-image: radial-gradient(whitesmoke, black);
@@ -51,7 +54,7 @@ header button {
 }
 
 .card-container h1{
-    align-self: flex-start;
+    align-self: center;
 }
 
 .card-container ul {
@@ -62,7 +65,6 @@ header button {
     justify-content: center;
     align-items: center;
     width: 50%;
-    margin-top: 10%;
 
 }
 
@@ -72,7 +74,7 @@ header button {
     align-items: center;
     border: 4px solid black;
     border-radius: 75px;
-    width: 75%;
+    width: 80%;
     height: 3em;
     margin-bottom: 10px;
     background-color: blue;
@@ -83,15 +85,18 @@ header button {
     border-radius: 30px;
 }
 
+.card-container li h3 {
+    font-size: 200%;
+}
+
 .countdown {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     border: 4px solid black;
     border-radius: 30px;
+    background-image: radial-gradient(whitesmoke, black);
     width: 30%;
-    height: 10.em;
-    justify-content: center;
 }
 .countdown h2 {
     width: 100%;
@@ -101,12 +106,30 @@ header button {
 .countdown-card {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100px;
-
 }
 
 #timer {
     align-self: center;
     text-decoration: underline;
+}
+
+@media screen and (max-width: 768px){
+    .card-container li h3{
+        font-size: 150%;
+    }
+    .card-container h1 {
+        font-size: 150%;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .card-container li h3{
+        font-size: 115%;
+    }
+    .card-container h1 {
+        font-size: 115%;
+    }
 }
