--- a/Assets/style.css
+++ b/Assets/style.css
@@ -15,7 +15,7 @@ header{
     flex-direction: column;
     width: 100%;
     background-color: black;
-    color: white;
+    color: whitesmoke;
     height: 125px;
 }
 
