--- a/Assets/style.css
+++ b/Assets/style.css
@@ -133,6 +133,17 @@ header button {
     order: 0;
 }
 
+
+#initials-input {
+    width: 100%;
+    height: 75%;
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 15%;
+    border: 1px solid black;
+    border-radius: 15px;
+}
+
 @media screen and (max-width: 768px){
     .card-container li h3{
         font-size: 100%;
