updated flex settings to better fit mobile devices

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -189,7 +189,11 @@ header button {
         font-size: 70%;
     }
 
-    .small-container h2 {
+    #question h2 {
         font-size: 100%
+    }
+
+    #start-button {
+        font-size: 75%;
     }
 }
